<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ChooseDeliveryActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_delivery_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_delivery_type"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/black"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_normal_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_delivery"
        android:layout_below="@id/tv_delivery_type"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:drawableEnd="@drawable/ic_arrow"
        android:textSize="20sp"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="#D8ECC2"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_pick_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pickup_and_drop"
        android:layout_below="@id/tv_normal_order"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="15dp"
        android:paddingEnd="20dp"
        android:drawableEnd="@drawable/ic_arrow"
        android:paddingTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="#D8ECC2"
        tools:ignore="RtlSymmetry" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="2dp"
        android:layout_below="@id/tv_pick_order"
        android:layout_marginTop="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/wallet"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/tv_wallet_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:text="\u20B9 200"
            android:paddingEnd="30dp"
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_goto_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_money"
        android:layout_below="@id/card_wallet"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:paddingBottom="5dp"
        android:background="#D8ECC2"/>


</RelativeLayout>