<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.NewOrdersActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_new_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_back_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_back" />

        <TextView
            android:id="@+id/tv_toolbar_ttl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/new_orders"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/no_order"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/shoppingcart_empty"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_no_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_order"
        android:layout_centerInParent="true"
        android:text="@string/no_orders_tv"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_new_order">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_newOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>