<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PickDropPayBottomSheetFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/select_payment_type"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_payment_list_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_amount_collected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_payment_list_pick"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_collected_amount"
                android:inputType="number"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_delivery_confirm_pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_amount_collected"
                android:layout_marginTop="20dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/gradient_toolbar"
                android:text="@string/confirm_delivery"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.core.widget.NestedScrollView>