<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CodBottomSheetFragment">

    <TextView
        android:id="@+id/tv_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_toolbar"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/submit_comments"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_collect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_comments"
        android:background="@android:color/white"
        android:paddingLeft="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Please Collect Cash :" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_collect"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="Collected Amount"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_payment_via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAmount"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:hint="Payment Via(Cash / UPI)"
        android:inputType="text" />


    <EditText
        android:id="@+id/et_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_payment_via"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/type_comments_here"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_comments"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_toolbar"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>